--- a/odb-sdk/CMakeLists.txt
+++ b/odb-sdk/CMakeLists.txt
@@ -10,6 +10,8 @@ include (CMakeDependentOption)
 set (ODBSDK_LIB_TYPE "SHARED" CACHE STRING "Build either as SHARED or STATIC library")
 cmake_dependent_option (ODBSDK_TESTS "Build unit tests for the OpenDarkBASIC SDK" ON "${ODB_TESTS}" OFF)
 
+string (TOUPPER ${CMAKE_SYSTEM_NAME} ODBSDK_PLATFORM)
+
 include (TestVisibilityMacros)
 test_visibility_macros (
     ODBSDK_API_EXPORT
@@ -24,12 +26,9 @@ configure_file ("templates/config.hpp.in" "include/odb-sdk/config.hpp")
 
 add_library (odb-sdk ${ODBSDK_LIB_TYPE}
     "include/odb-sdk/DynamicLibrary.hpp"
-
-    "$<$<PLATFORM_ID:Windows>:src/DynamicLibrary_win32.cpp>"
-	"$<$<PLATFORM_ID:Linux>:src/DynamicLibrary_linux.cpp>"
+    "src/DynamicLibrary.cpp"
     #"src/FileSystem.cpp"
     "src/Log.cpp"
-    "src/RefCounted.cpp"
     "src/Str.cpp")
 target_include_directories (odb-sdk
     PUBLIC
@@ -42,11 +41,11 @@ target_compile_definitions (odb-sdk
         _CRT_SECURE_NO_WARNINGS)
 target_compile_options (odb-sdk
     PRIVATE
-        "$<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra -pedantic -Wno-unused-function -Wno-unused-parameter>"
-        "$<$<CXX_COMPILER_ID:Clang>:-Wall -Wextra -pedantic -Wno-unused-function -Wno-unused-parameter>"
-        "$<$<CXX_COMPILER_ID:AppleClang>:-Wall -Wextra -pedantic -Wno-unused-function -Wno-unused-parameter -fpermissive>")
+        $<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra -pedantic -Wno-unused-function -Wno-unused-parameter>
+        $<$<CXX_COMPILER_ID:Clang>:-Wall -Wextra -pedantic -Wno-unused-function -Wno-unused-parameter>
+        $<$<CXX_COMPILER_ID:AppleClang>:-Wall -Wextra -pedantic -Wno-unused-function -Wno-unused-parameter -fpermissive>)
 include (ODBTargetProperties)
-odb_target_properties (odb-sdk
+set_target_properties (odb-sdk
     PROPERTIES
         CXX_STANDARD 17
         CXX_STANDARD_REQUIRED TRUE
@@ -54,10 +53,36 @@ odb_target_properties (odb-sdk
         LIBRARY_OUTPUT_DIRECTORY ${ODB_BUILD_LIBDIR}
         RUNTIME_OUTPUT_DIRECTORY ${ODB_BUILD_BINDIR})
 
+###############################################################################
+# Dependencies
+###############################################################################
+
 if (UNIX)
     find_package (DL REQUIRED)
     target_link_libraries (odb-sdk PRIVATE DL::DL)
 endif ()
+
+include (FetchContent)
+
+# LIEF is required for loading commands from shared libraries
+set (LIEF_PYTHON_API OFF CACHE BOOL "" FORCE)
+set (LIEF_C_API OFF CACHE BOOL "" FORCE)
+set (LIEF_EXAMPLES OFF CACHE BOOL "" FORCE)
+set (LIEF_FROZEN_ENABLED OFF CACHE BOOL "" FORCE)
+set (LIEF_USE_CCACHE OFF CACHE BOOL "" FORCE)
+set (LIEF_LOGGING OFF CACHE BOOL "" FORCE)
+set (LIEF_LOGGING_DEBUG OFF CACHE BOOL "" FORCE)
+set (LIEF_ENABLE_JSON OFF CACHE BOOL "" FORCE)
+set (LIEF_OAT OFF CACHE BOOL "" FORCE)
+set (LIEF_DEX OFF CACHE BOOL "" FORCE)
+set (LIEF_VDEX OFF CACHE BOOL "" FORCE)
+set (LIEF_ART OFF CACHE BOOL "" FORCE)
+FetchContent_Declare (
+    lief
+    URL https://github.com/lief-project/LIEF/archive/refs/tags/0.14.1.tar.gz
+    URL_HASH SHA256=92916dcb3178353d863aef4f409186889983c56e025b774741d5316a72ec3a7d
+)
+FetchContent_MakeAvailable (lief)
 
 if (ODBSDK_TESTS)
     add_executable (test_odb-sdk
@@ -66,14 +91,21 @@ if (ODBSDK_TESTS)
         odb-sdk
         gmock
         gmock_main)
-    odb_target_properties (test_odb-sdk PROPERTIES
+    set_target_properties (test_odb-sdk PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY ${ODB_BUILD_BINDIR}
-        VS_DEBUGGER_WORKING_DIRECTORY ${ODB_BUILD_BINDIR})
+        VS_DEBUGGER_WORKING_DIRECTORY ${ODB_BUILD_BINDIR}
+        ARCHIVE_OUTPUT_DIRECTORY ${ODB_BUILD_LIBDIR}
+        LIBRARY_OUTPUT_DIRECTORY ${ODB_BUILD_LIBDIR}
+        RUNTIME_OUTPUT_DIRECTORY ${ODB_BUILD_BINDIR})
 endif ()
 
 add_subdirectory ("plugins")
 add_subdirectory ("runtime")
 add_subdirectory ("runtime-dbp")
+
+###############################################################################
+# Installation
+###############################################################################
 
 install (
     TARGETS odb-sdk
