--- a/odb-compiler/templates/config.h.in
+++ b/odb-compiler/templates/config.h.in
@@ -1,26 +1,15 @@
 #pragma once
 
-/* Version info */
-#define STRINGIFY_(x) #x
-#define STRINGIFY(x) STRINGIFY_(x)
-#define ODBCOMPILER_VERSION_MAJOR ${PROJECT_VERSION_MAJOR}
-#define ODBCOMPILER_VERSION_MINOR ${PROJECT_VERSION_MINOR}
-#define ODBCOMPILER_VERSION_PATCH ${PROJECT_VERSION_PATCH}
-#define ODBCOMPILER_VERSION \
-    ((ODBCOMPILER_VERSION_MAJOR << 16) | (ODBCOMPILER_VERSION_MINOR << 8) | ODBCOMPILER_VERSION_PATCH)
-#define ODBCOMPILER_VERSION_STR \
-    STRINGIFY(ODBCOMPILER_VERSION_MAJOR) "." STRINGIFY(ODBCOMPILER_VERSION_MINOR) "." STRINGIFY(ODBCOMPILER_VERSION_PATCH)
-#undef STRINGIFY_
-#undef STRINGIFY
+/* Options ----------------------------------------------------------------- */
 
-/* CMake options */
+#define ODBCOMPILER_PLATFORM_${ODBCOMPILER_PLATFORM}
+#define ODBCOMPILER_${ODBCOMPILER_LIB_TYPE}
+
 #cmakedefine ODBCOMPILER_DOT_EXPORT
 #cmakedefine ODBCOMPILER_VERBOSE_BISON
 #cmakedefine ODBCOMPILER_VERBOSE_FLEX
 
-/* Host platform used to compile this library */
-#define ODBCOMPILER_PLATFORM_${ODBCOMPILER_PLATFORM}
-#define ODBCOMPILER_${ODBCOMPILER_LIB_TYPE}
+/* Symbol visibility ------------------------------------------------------- */
 
 #if defined(ODBCOMPILER_SHARED)
 #   if defined(ODBCOMPILER_BUILDING)
@@ -33,3 +22,18 @@
 #   define ODBCOMPILER_PUBLIC_API
 #   define ODBCOMPILER_PRIVATE_API
 #endif
+
+/* Version string ---------------------------------------------------------- */
+
+#define ODBCOMPILER_VERSION_MAJOR ${PROJECT_VERSION_MAJOR}
+#define ODBCOMPILER_VERSION_MINOR ${PROJECT_VERSION_MINOR}
+#define ODBCOMPILER_VERSION_PATCH ${PROJECT_VERSION_PATCH}
+#define ODBCOMPILER_VERSION \
+    ((ODBCOMPILER_VERSION_MAJOR << 16) | (ODBCOMPILER_VERSION_MINOR << 8) | ODBCOMPILER_VERSION_PATCH)
+#define STRINGIFY_(x) #x
+#define STRINGIFY(x) STRINGIFY_(x)
+#define ODBCOMPILER_VERSION_STR \
+    STRINGIFY(ODBCOMPILER_VERSION_MAJOR) "." STRINGIFY(ODBCOMPILER_VERSION_MINOR) "." STRINGIFY(ODBCOMPILER_VERSION_PATCH)
+#undef STRINGIFY_
+#undef STRINGIFY
+
