--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,5 +61,6 @@ endif ()
 add_subdirectory ("thirdparty/gperf-3.1")
 add_subdirectory ("odb-sdk")
 add_subdirectory ("odb-compiler")
+add_subdirectory ("dbp-runtime")
 #add_subdirectory ("odb-interpreter")
 add_subdirectory ("odb-cli")
