--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -105,9 +105,9 @@ find_package (BISON REQUIRED 3.8)
 file (MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/src/parser")
 file (MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/include/odb-compiler/parser")
 
-#if (MSVC)
-#    set (FLEX_COMPILE_FLAGS --wincompat)
-#endif ()
+if (WIN32)
+    set (FLEX_COMPILE_FLAGS --wincompat)
+endif ()
 if (ODBCOMPILER_BISON_COUNTER_EXAMPLES)
     set (BISON_COMPILE_FLAGS "-Wcounterexamples")
 endif ()
