--- a/odb-sdk/templates/config.h.in
+++ b/odb-sdk/templates/config.h.in
@@ -11,7 +11,6 @@
 #cmakedefine ODBSDK_MEM_BACKTRACE
 #cmakedefine ODBSDK_MEM_DEBUGGING
 #cmakedefine ODBSDK_TESTS
-#cmakedefine ODBSDK_VEC_64BIT_CAPACITY
 
 #define ODBSDK_SIZEOF_VOID_P          ${CMAKE_SIZEOF_VOID_P}
 #define ODBSDK_BTREE_EXPAND_FACTOR    ${ODBSDK_BTREE_EXPAND_FACTOR}
@@ -22,7 +21,7 @@
 #define ODBSDK_MEM_BACKTRACE_SIZE     ${ODBSDK_MEM_BACKTRACE_SIZE}
 #define ODBSDK_THREADLOCAL            ${ODBSDK_THREADLOCAL}
 #define ODBSDK_VEC_EXPAND_FACTOR      ${ODBSDK_VEC_EXPAND_FACTOR}
-#define ODBSDK_VEC_MIN_CAPACITY       ${ODBSDK_VEC_MIN_CAPACITY}u
+#define ODBSDK_VEC_MIN_CAPACITY       ${ODBSDK_VEC_MIN_CAPACITY}
 
 /* Symbol visibility ------------------------------------------------------- */
 
