Adding internal structure to vector to make accicental mis-use harder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,13 +54,12 @@ if (ODB_TESTS)
         googletest
         URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.tar.gz
         URL_HASH SHA256=8ad598c73ad796e0d8280b082cebd82a630d73e73cd3c70057938a6501bba5d7
-        DOWNLOAD_EXTRACT_TIMESTAMP TRUE
     )
     FetchContent_MakeAvailable (googletest)
 endif ()
 
 add_subdirectory ("thirdparty/gperf-3.1")
 add_subdirectory ("odb-sdk")
-add_subdirectory ("odb-compiler")
+#add_subdirectory ("odb-compiler")
 #add_subdirectory ("odb-interpreter")
-add_subdirectory ("odb-cli")
+#add_subdirectory ("odb-cli")
